# activelearning

./: .codespellrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md 
.github/workflows/: check.yaml  test.yaml
config/: branin.yaml  branin_toy_example.yaml
config/sampler/: gflownet.yaml
src/activelearning/: active_learning.py  config.py  main.py  runtime.py
src/activelearning/acquisition/: acquisition.py  botorch_acquisition.py  botorch_analytic.py  botorch_multifidelity.py  botorch_qbatch.py  candidate_set.py  config.py  dummy_acquisition.py
src/activelearning/budget/: budget.py  config.py  schedule_config.py
src/activelearning/dataset/: config.py  dataset.py  dummy_dataset.py  list_dataset.py
src/activelearning/logger/: config.py  logger.py
src/activelearning/oracle/: augmented_function_oracle.py  composite_oracle.py  config.py  dummy_oracle.py  multi_fidelity_oracle.py  oracle.py  plotting.py
src/activelearning/sampler/: config.py  hypercube_sampler.py  hypercube_uniform_sampler.py  pool_score_sampler.py  pool_uniform_sampler.py  sampler.py
src/activelearning/selector/: clustered_knapsack_selector.py  config.py  cost_aware_selector.py  knapsack_selector.py  score_selector.py  selector.py
src/activelearning/surrogate/: botorch_surrogate.py  config.py  dummy_mean_surrogate.py  dummy_surrogate.py  surrogate.py
src/activelearning/utils/: config_loader.py  sampling.py  types.py  (+1 more)
tests/: test_active_learning.py  test_gflownet_branin.py  test_runtime.py
tests/acquisition/: test_botorch_acquisition.py  test_candidate_set.py  test_dummy_acquisition.py
tests/budget/: test_budget.py
tests/dataset/: test_dummy_dataset.py  test_list_dataset.py
tests/logger/: test_logger.py
tests/oracle/: test_augmented_function_oracle.py  test_composite_oracle.py  test_dummy_oracle.py  test_multi_fidelity_oracle.py  test_oracle_budget_integration.py  test_plotting.py
tests/sampler/: test_hypercube_sampler.py  test_hypercube_uniform_sampler.py  test_pool_score_sampler.py  test_pool_uniform_sampler.py
tests/selector/: test_clustered_knapsack_selector.py  test_cost_aware_selector.py  test_knapsack_selector.py  test_score_selector.py
tests/surrogate/: test_botorch_surrogate.py  test_dummy_surrogate.py
tests/utils/: test_types.py
(+13 files in other folders)
