[project]
name = "activelearning"
version = "0.1.0"
description = "Multi-fidelity active learning with GFlowNets"
authors = [
    {name = "pedromsferraz-mila", email = "pedro.ferraz@mila.quebec"},
    {name = "alexhernandezgarcia", email = "alex.hernandez-garcia@mila.quebec"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0,<3.0.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pre-commit>=3.0",
]

[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"
