[project]
name = "activelearning"
version = "0.1.0"
description = "Multi-fidelity active learning with GFlowNets"
authors = [
    {name = "pedromsferraz-mila", email = "pedro.ferraz@mila.quebec"},
    {name = "alexhernandezgarcia", email = "alex.hernandez-garcia@mila.quebec"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botorch>=0.16.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0,<3.0.0",
    "omegaconf>=2.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "torch>=2.5.1",
]

[project.optional-dependencies]
wandb = ["wandb"]
comet = ["comet_ml"]
aim = ["aim"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pre-commit>=3.0",
]

[project.scripts]
activelearning = "activelearning.main:main"

[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"
